@@ -8,6 +8,7 @@ FIX:		Fixed recursion bug in console history
 FIX:		Multithreading issue with slow window redraws and large images
 FIX:		Ensure valid thread stack sizes on platforms where it matters
 FEATURE:	Add support for a GFILE user provided file system
+FEATURE:	Add gwinListItemSetText() to replace text in a GWIN list item
 
 
 *** Release 2.7 ***
